# refinement-types

./: Cargo.toml  README.md  install.sh
src/: examples.rs  main.rs
src/examples/: custom_funcs.rs  funcs.rs  invariants.rs
